# LNES

./: CMakeLists.txt  LICENSE  README.md
include/: bus.hpp  cpu.hpp  mem.hpp
src/: bus.cpp  cpu.cpp  main.cpp
